# ToolAnalysis

./: .data  .gitignore  .travis.yml  BeamChecker_8h_source.html  BeamStatusClass_8h_source.html  BeamTimeStudy  BeamTimeTreeMaker_8h_source.html  BeamTimeTreeReader_8h_source.html  CI.sh  CMakeLists.txt  ChannelKey_8h_source.html  CheckDetectorCounts_8h_source.html  DNNTrackLength  DigitBuilderDoE_8h_source.html  Direction_8h_source.html  Dockerfile  Dockerfile.base  Dockerfile.base-light  Dockerfile.light  Doxyfile  EnergyReco  EventDisplay_8h_source.html  EventSelectorDoE_8h_source.html  EventSelector_8h_source.html  Example1  Example2  Example3  Example4  Example5  Example6  ExampleGenerateData_8h_source.html  ExampleOverTool_8h_source.html  ExampleRoot_8h_source.html  ExampleSaveStore_8h_source.html  FTBFanalysis  Factory_8h_source.html  FilterLAPPDEvents  FindMrdTracks  FindTrackLengthInWater  FrameworkMakefileUPS.patch  (+287 more)
.github/workflows/: docker-base.yml  docker-image.yml  tempbuild.yml
DataModel/: ADCPulse.cpp  ADCPulse.h  ANNIEGeometry.cpp  ANNIEGeometry.h  ANNIERecoObjectTable.cpp  ANNIERecoObjectTable.h  ANNIEWrappers.h  ANNIEalgorithms.cpp  ANNIEalgorithms.h  ANNIEconstants.h  BeamDataPoint.h  BeamStatus.cpp  BeamStatus.h  BeamStatusClass.h  CalibratedADCWaveform.h  CardData.cpp  CardData.h  Channel.h  ChannelKey.h  DataModel.cpp  DataModel.h  Detector.cpp  Detector.h  Direction.h  ExampleRoot.cpp  ExampleRoot.h  FoMCalculator.cpp  FoMCalculator.h  GenieInfo.h  Geometry.cpp  Geometry.h  HeftyInfo.h  Hit.h  IFBeamDataPoint.h  LAPPD.h  LAPPDHit.h  LAPPDPulse.h  LinkDef.h  Logging.cpp  Logging.h  (+72 more)
UserTools/: DummyTool.cpp  DummyTool.h  ExampleGenerateData.cpp  ExampleGenerateData.h  ExampleLoadRoot.cpp  ExampleLoadRoot.h  ExamplePrintData.cpp  ExamplePrintData.h  ExamplePythonGenerate.py  ExampleSaveRoot.h  ExampleSaveStore.cpp  ExampleSaveStore.h  ExampleloadStore.cpp  ExampleloadStore.h  LAPPDFindPeak.cpp  LAPPDFindPeak.h  LAPPDParseScope.cpp  LAPPDParseScope.h  LAPPDSave.h  Logger.cpp  Logger.h  MinuitOptimizer.cpp  MinuitOptimizer.h  PythonScript  PythonScript.cpp  RawLoadSplit.cpp  RawLoadSplit.h  ServiceAdd.cpp  ServiceAdd.h  Unity.cpp  Unity.h  newPyTool.sh  newTool.sh
UserTools/ADCCalibrator/: ADCCalibrator.cpp  ADCCalibrator.h
UserTools/ADCHitFinder/: ADCHitFinder.cpp  ADCHitFinder.h  README.md
UserTools/ANNIEEventBuilder/: ANNIEEventBuilder.cpp  ANNIEEventBuilder.h  README.md
UserTools/AmBeRunStatistics/: AmBeRunStatistics.cpp  AmBeRunStatistics.h  README.md
UserTools/ApplyMRDEff/: ApplyMRDEff.cpp  ApplyMRDEff.h  README.md
UserTools/BDTMuonEnergyPredict/: BDTMuonEnergyPredict.py  README.md
UserTools/BDTMuonEnergyTrain_Test/: BDTMuonEnergyTrain_Test.py  README.md
UserTools/BeamChecker/: BeamChecker.cpp  BeamChecker.h  README.md  bc.cpp
UserTools/BeamClusterAnalysis/: BeamClusterAnalysis.cpp  BeamClusterAnalysis.h  README.md
UserTools/BeamClusterPlots/: BeamClusterPlots.cpp  BeamClusterPlots.h  (+1 more)
configfiles/: Create_run_config.sh  DummyToolConfig  LoggerConfig  LoggerToolChain  LoggerTools  ToolChainConfig
docs/: ADCCalibrator_8h_source.html  ADCHitFinder_8h_source.html  ADCPulse_8h_source.html  ANNIEGeometry_8h_source.html  ANNIERecoObjectTable_8h_source.html  ANNIEalgorithms_8h_source.html  ANNIEconstants_8h_source.html  BeamChecker_8h_source.html  BeamDataPoint_8h_source.html  BeamFetcher_8h_source.html  BeamStatusClass_8h_source.html  BeamStatus_8h_source.html  BeamTimeAna_8h_source.html  BeamTimeTreeMaker_8h_source.html  BeamTimeTreeReader_8h_source.html  CalibratedADCWaveform_8h_source.html  CardData_8h_source.html  ChannelKey_8h_source.html  Channel_8h_source.html  CheckDetectorCounts_8h_source.html  Constants_8h_source.html  DataModel_8h_source.html  Detector_8h_source.html  DigitBuilderDoE_8h_source.html  DigitBuilderROOT_8h_source.html  DigitBuilder_8h_source.html  Direction_8h_source.html  DummyTool_8h_source.html  EventDisplay_8h_source.html  EventSelectorDoE_8h_source.html  EventSelector_8h_source.html  ExampleGenerateData_8h_source.html  ExampleLoadRoot_8h_source.html  ExampleOverTool_8h_source.html  ExamplePrintData_8h_source.html  ExampleRoot_8h_source.html  ExampleSaveRoot_8h_source.html  ExampleSaveStore_8h_source.html  ExampleloadStore_8h_source.html  Factory_8h_source.html  (+470 more)
include/: LAPPDPulse.h  README.md
latex/: annotated.tex  classADCCalibrator.tex  classADCHitFinder.eps  classADCHitFinder.tex  classADCPulse.tex  classANNIEGeometry.tex  classBeamChecker.eps  classBeamChecker.tex  classBeamFetcher.tex  classBeamTimeAna.eps  classBeamTimeTreeMaker.tex  classBeamTimeTreeReader.eps  classChannel.tex  classChannelKey.tex  classCheckDetectorCounts.tex  classDigitBuilderDoE.eps  classDigitBuilderDoE.tex  classDigitBuilderROOT.eps  classDirection.eps  classEventDisplay.tex  classEventSelector.eps  classEventSelectorDoE.tex  classExampleGenerateData.eps  classExampleGenerateData.tex  classExamplePrintData.tex  classExampleSaveStore.eps  classExampleloadStore.eps  classExampleloadStore.tex  classFindMrdTracks.tex  classFindTrackLengthInWater.tex  classHistogramsRootLAPPDData.eps  classHistogramsRootLAPPDData.tex  classHit.tex  classHitCleaner.eps  classHitResiduals.eps  classIFBeamDBInterface.tex  classLAPPDAnalysis.tex  classLAPPDBaselineSubtract.eps  classLAPPDFindPeak.eps  classLAPPDIntegratePulse.eps  (+136 more)
script/: ToolAnalysis.sh  ToolAnalysisMultirun.sh  ToolAnalysisNohup.sh
search/: all_67.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_71.js  all_74.js  all_77.js  classes_63.js  classes_66.js  classes_68.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_74.js  classes_77.js  functions_63.js  functions_65.js  functions_69.js  functions_6d.js  functions_6f.js  functions_71.js  functions_72.js  functions_7a.js  pages_64.js  pages_65.js  pages_68.js  pages_6d.js  pages_74.js  pages_77.js  search.js  variables_62.js  variables_66.js  variables_69.js  variables_6e.js  variables_6f.js  variables_70.js  variables_74.js  variables_77.js
src/: .gitignore  main.cpp
(+2278 files in other folders)
